# RebornOffline

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt
src/Editor/: CMakeLists.txt  CameraController.h  Editors.h  ResourceView.h  TestMatrix.h  TestVector.h  main.cpp
src/Editor/Assets/: test.txt
src/Editor/Assets/models/lowpoly_forest/: ENFOR_EEVEE.mtl
src/Editor/Assets/shaders/lowpoly/: fragment.glsl  vertex.glsl
src/Editor/Assets/shaders/postprocess/: fragment.glsl
src/Editor/Assets/shaders/simple_triangle/: fragment.glsl  vertex.glsl
src/Engine/: CMakeLists.txt
src/Game/: CMakeLists.txt  main.cpp
src/Reborn/: Application.cpp  Application.h  CMakeLists.txt  Core.cpp  Core.h  EntryPoint.h  IEventHandler.h  KeyCodes.h  Log.h  Platform.h  Reborn.cpp  Reborn.h  Renderer.cpp  Renderer.h  SDLUtils.cpp  SDLUtils.h  System.cpp  System.h  Utils.cpp  Utils.h  Window.cpp  Window.h  easylogging++.h  engine.cpp  engine.h
src/Reborn/Components/: ComponentTypes.h  ImGuiComponent.h  RenderComponent.cpp  RenderComponent.h  TestComponent.h  TickComponent.h  Transform3DComponent.cpp  Transform3DComponent.h
src/Reborn/Core/: Application.cpp  Application.h  ImGuiManager.cpp  ImGuiManager.h  System.cpp  System.h  Window.cpp  Window.h
src/Reborn/ECS/: BaseComponentContainer.h  Component.h  ComponentContainer.h  Entity.h  EntityContainer.h  EntityManager.h  EntitySystem.h
src/Reborn/Event/: ApplicationCloseEvent.h  ApplicationShouldCloseEvent.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.h  EventHandlerBase.cpp  EventHandlerBase.h  IEvent.h  KeyPressedEvent.h  MouseButtonEvent.h  MouseEvents.h
src/Reborn/Graphics/: Camera.cpp  Camera.h  Depricated_Framebuffer.h  Depricated_Renderer.h  Depricated_TextureHandler.h  Depricated_VertexArrayObject.h  Framebuffer.h  GLSLProgram.h  GLTexture.h  HandleAllocator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.h  Platform.h  Renderbuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.h  TextureDescriptor.h  Transform.cpp  Transform.h  VertexArrayObject.h  VertexAttribute.cpp  VertexAttribute.h  VertexBufferObject.h  VertexFactory.cpp  VertexFactory.h  VertexLayout.cpp  VertexLayout.h
src/Reborn/Graphics/Backends/: CommandBuffer.cpp  CommandBuffer.h  RenderBackend.h  RenderBackendTypes.h  RenderBackend_GL.cpp  RenderBackend_GL.h
src/Reborn/Graphics/Common/: APIType.h  BufferObject.h  Camera.cpp  Framebuffer.h  GraphicsResource.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.h  Renderbuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.h  TextureHandler.h  Types.h  VertexArrayObject.h  VertexAttribute.cpp  VertexAttribute.h
src/Reborn/Graphics/Platform/DirectX11/: D11ShaderProgram.h
src/Reborn/Graphics/Platform/OpenGL/: GLBufferObject.h  GLFramebuffer.h  GLRenderbuffer.h  GLRenderer.cpp  GLRenderer.h  GLShaderProgram.h  GLTextureHandler.h  GLVertexArrayObject.h
src/Reborn/Graphics/RendererImpl/: RendererDirectX11.cpp  RendererGL.cpp  RendererStub.cpp
src/Reborn/Graphics/shaders/: postprocessFragment.glsl  postprocessVertex.glsl  test.hlsl
src/Reborn/Graphics/shaders/lowpoly/: fragment.glsl  vertex.glsl
src/Reborn/Graphics/shaders/postprocess/: postprocessVertex.glsl
src/Reborn/Math/: MathCore.h  MathUtils.cpp  MathUtils.h  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  Swizzle.h  TestVector.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
src/Reborn/Platform/Rendering/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h
src/Reborn/Platform/Rendering/OpenGL/shaders/: postprocessFragment.glsl
src/Reborn/Resources/: AbstractResource.h  GLSLShaderResouce.cpp  GLSLShaderResource.h  MeshResource.cpp  MeshResource.h  ModelResource.cpp  ModelResource.h  ResourceManager.cpp  ResourceManager.h  ShaderResouce.cpp  ShaderResource.h  TextResource.cpp  TextResource.h
src/Reborn/Systems/: ImGuiSystem.h  RenderSystem.h  TestSystem.h  TickSystem.h  UpdateTransformSystem.h
